--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # Fives version
 set(FIVES_VERSION_MAJOR "0")
 set(FIVES_VERSION_MINOR "1")
-set(FIVES_VERSION_PATCH "0")
+set(FIVES_VERSION_PATCH "1")
 if (${FIVES_VERSION_PATCH} EQUAL "0")
     set(FIVES_RELEASE_VERSION "${FIVES_VERSION_MAJOR}.${FIVES_VERSION_MINOR}")
 else ()
@@ -42,9 +42,9 @@ endif ()
 set(NLOHMANNJSON_GIT_REF "v3.11.3")
 set(YAMLCPP_GIT_REF "0.8.0")
 set(GOOGLETEST_GIT_REF "main")                                                   # googletest recommands to  always use the latest commit on main
-set(SIMGRID_GIT_REF "v3.36")
-set(FSMOD_GIT_REF "v0.2")                                                        # or maybe we should use 'main'
-set(WRENCH_GIT_REF "master")                   # Should be a tagged version instead, but a few quick fixes currently only on master are needed
+set(SIMGRID_GIT_REF "v4.0")
+set(FSMOD_GIT_REF "v0.3")                                                        
+set(WRENCH_GIT_REF "v2.6")               
 
 # WARNING : this is the date at CONFIG time (when 'cmake ..' is run, not when building the project)
 string(TIMESTAMP TODAY "%Y%m%d")
@@ -216,7 +216,7 @@ if (NOT USE_SYSTEM_LIBS AND BUILD_DEPENDENCIES)
         wrench
         GIT_REPOSITORY https://github.com/wrench-project/wrench
         GIT_TAG        ${WRENCH_GIT_REF}
-        # GIT_SHALLOW    ON                                                                 # Cannot be used when trying to checkout a specific commit hash
+        GIT_SHALLOW    ON                                                       
         DEPENDS        simgrid fsmod
         SOURCE_DIR     ${EXTERNAL_DIR}/wrench
         INSTALL_DIR    ${LOCAL_INSTALL_DIR}
